chore: fixing api features

--- a/src/features/Home/ApiFeatures/ApiFeatures.module.scss
+++ b/src/features/Home/ApiFeatures/ApiFeatures.module.scss
@@ -13,7 +13,7 @@
 
   .ApiFeaturesImage {
     display: inline-block;
-    width: rem(60);
+    width: rem(70);
   }
 
   .FeatureText {
@@ -22,7 +22,6 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    gap: rem(2);
 
     header {
       display: flex;
@@ -34,12 +33,13 @@
       margin-left: rem(4);
     }
     .FeatureParagraph {
-      font-weight: 500;
+      font-weight: 400;
       line-height: rem(3);
     }
     .FeatureList {
       margin-left: rem(-2);
-      font-weight: 500;
+      font-weight: 400;
+      padding-left: rem(2);
 
       .FeatureOptions {
         align-items: center;
