fix: till issue7

--- a/src/features/Home/ClientLibraries/ClientLibraries.module.scss
+++ b/src/features/Home/ClientLibraries/ClientLibraries.module.scss
@@ -22,6 +22,8 @@
     padding: 0 rem(2);
     @media (max-width: 992px) {
       text-align: center;
+      font-size: rem(1.8);
+      line-height: rem(2.6);
     }
   }
   .IconJS {
