--- a/src/features/Home/styles.module.scss
+++ b/src/features/Home/styles.module.scss
@@ -5,6 +5,9 @@
   display: flex;
   flex-direction: column;
   gap: rem(16);
+  @media (max-width: 992px) {
+    gap: rem(5.2);
+  }
 }
 
 .featureSvg {
