--- a/src/features/Home/Benefits/Benefits.module.scss
+++ b/src/features/Home/Benefits/Benefits.module.scss
@@ -77,12 +77,21 @@
         width: rem(46.8);
         > h1 {
           margin-bottom: rem(0.8);
-          font-size: rem(2.4);
         }
         > p {
           line-height: rem(3.6);
-          font-size: rem(1.8);
+          font-size: rem(2.4);
         }
+        // @media screen and (max-width: 992px) {
+        //   > h1 {
+        //     margin-bottom: rem(0.8);
+        //     font-size: rem(2.4);
+        //   }
+        //   > p {
+        //     line-height: rem(3.6);
+        //     font-size: rem(1.8);
+        //   }
+        // }
       }
       @media screen and (max-width: 992px) {
         flex-direction: column;
@@ -91,6 +100,15 @@
         }
         .InformationContent {
           width: 100%;
+
+          > h1 {
+            margin-bottom: rem(0.8);
+            font-size: rem(2.4);
+          }
+          > p {
+            line-height: rem(3.6);
+            font-size: rem(1.8);
+          }
         }
       }
     }
