--- a/src/features/Home/Benefits/Benefits.module.scss
+++ b/src/features/Home/Benefits/Benefits.module.scss
@@ -82,16 +82,6 @@
           line-height: rem(3.6);
           font-size: rem(2.4);
         }
-        // @media screen and (max-width: 992px) {
-        //   > h1 {
-        //     margin-bottom: rem(0.8);
-        //     font-size: rem(2.4);
-        //   }
-        //   > p {
-        //     line-height: rem(3.6);
-        //     font-size: rem(1.8);
-        //   }
-        // }
       }
       @media screen and (max-width: 992px) {
         flex-direction: column;
@@ -120,6 +110,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: 992px) {
+    > figcaption {
+      font-size: var(--fontSizes-sm);
+    }
+  }
 
   .BenefitsImage {
     background-size: contain;
