--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -155,6 +155,7 @@ div[class*='sidebarViewport'] {
 .navbar {
   padding: 0 5%;
   height: var(--nav-height);
+  line-height: rem(2);
   @media (max-width: 996px) {
     padding: 0 rem(1.5);
   }
@@ -184,6 +185,10 @@ div[class*='sidebarViewport'] {
 
 .navbar__items--right {
   gap: rem(1);
+  font-size: rem(1.4);
+  a {
+    font-weight: 700;
+  }
 }
 
 main[class*='docMainContainer'] .container {
