--- a/src/components/UserNavbarItem/UserNavbarItem.module.scss
+++ b/src/components/UserNavbarItem/UserNavbarItem.module.scss
@@ -4,6 +4,7 @@
   color: var(--colors-coral500);
   font-weight: bold;
   display: flex !important;
+  font-size: rem(1.4);
   @media (max-width: 996px) {
     align-items: center;
     border: 2px solid var(--colors-coral500);
@@ -19,6 +20,7 @@
   border-radius: 16px;
   padding: rem(1) rem(1.6);
   transition: background-color .2s;
+  font-size: rem(1.4);
   &:hover {
     color: var(--ifm-color-emphasis-0);
     background-color: var(--colors-coral700);
