--- a/src/components/CustomSelectDropdown/custom_select_item.module.scss
+++ b/src/components/CustomSelectDropdown/custom_select_item.module.scss
@@ -25,6 +25,7 @@
         margin-left: rem(1);
         line-height: rem(2);
         .accountId {
+            font-size: rem(1);
             color: var(--ifm-color-emphasis-600);
         }
     }
