--- a/src/features/Apiexplorer/RequestJSONBox/RequestJSONBox.module.scss
+++ b/src/features/Apiexplorer/RequestJSONBox/RequestJSONBox.module.scss
@@ -69,14 +69,33 @@
 
 .wrapper {
   width: rem(44);
-  .modal {
-    padding-left: rem(2.4);
-  }
+}
+.modal {
+  padding-left: rem(2.3);
+  font-size: rem(1.4);
+  line-height: rem(2);
+}
 
-  .buttonWrapper {
-    display: flex;
-    justify-content: end;
-    padding: rem(2.4);
-    gap: rem(2);
+.buttonWrapper {
+  display: flex;
+  justify-content: end;
+  padding: rem(2.4);
+
+  .btn {
+    padding: rem(1) rem(1.6);
+  }
+}
+
+@media (max-width: 992px) {
+  div[role='dialog'] {
+    height: unset;
+    width: rem(44);
+  }
+}
+
+@media (max-width: 425px) {
+  div[role='dialog'] {
+    height: unset;
+    width: rem(32);
   }
 }
