--- a/src/features/Apiexplorer/RequestJSONBox/RequestJSONBox.module.scss
+++ b/src/features/Apiexplorer/RequestJSONBox/RequestJSONBox.module.scss
@@ -71,11 +71,11 @@
   width: rem(44);
 }
 .modal {
-  padding-left: rem(2.4);
+  padding: rem(0.8) 0 0 rem(2.4);
   font-size: rem(1.4);
   line-height: rem(2);
   @media (max-width: 992px) {
-    padding-left: rem(1.6);
+    padding: 0 0 0 rem(1.6);
   }
 }
 
@@ -89,10 +89,15 @@
   }
 }
 
+div[role='dialog'] {
+  padding-top: rem(0.8);
+}
+
 @media (max-width: 992px) {
   div[role='dialog'] {
     height: unset;
     width: rem(44);
+    padding-top: rem(0.2);
   }
 }
 
@@ -100,5 +105,6 @@
   div[role='dialog'] {
     height: unset;
     width: rem(32);
+    padding-top: rem(0.2);
   }
 }
