chore: improving UI

--- a/src/features/Apiexplorer/RequestJSONBox/RequestJSONBox.module.scss
+++ b/src/features/Apiexplorer/RequestJSONBox/RequestJSONBox.module.scss
@@ -64,6 +64,12 @@
     max-height: 60vh;
     overflow-y: auto;
     width: 100%;
+
+    .reactJsonContainer {
+      display: flex;
+      flex-direction: column;
+      gap: rem(2);
+    }
   }
 }
 
