fix: dropdown fix

--- a/src/features/Apiexplorer/Dropdown/Dropdown.module.scss
+++ b/src/features/Apiexplorer/Dropdown/Dropdown.module.scss
@@ -66,6 +66,7 @@
 
     .dropdownSelected {
       background: var(--ifm-color-gray-400);
+      pointer-events: none;
     }
 
     .dropdownList {
