feat: footer added for documentation and api

--- a/src/features/Auth/Login/Login.module.scss
+++ b/src/features/Auth/Login/Login.module.scss
@@ -4,7 +4,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  min-height: 93vh;
+
+  .loginsection {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
 
   .loginImage {
     margin: rem(9.5) 0 rem(1) rem(1.6);
@@ -15,4 +22,8 @@
     width: rem(12.8);
     height: rem(12.8);
   }
+}
+
+.footer {
+  width: 100%;
 }
