--- a/src/features/Apiexplorer/styles.module.scss
+++ b/src/features/Apiexplorer/styles.module.scss
@@ -9,6 +9,10 @@
   width: 100%;
   margin-top: rem(4);
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 89vh;
 
   .heading {
     text-align: center;
