--- a/src/features/dashboard/components/ApiTokenTable/api-table.module.scss
+++ b/src/features/dashboard/components/ApiTokenTable/api-table.module.scss
@@ -1,8 +1,13 @@
 @use 'src/styles/utility' as *;
 
-.api_table {
-  overflow-y: auto;
-  overflow-x: auto;
-  height: rem(30);
-  min-height: 10rem;
+.api_table_container {
+  position: relative;
+  overflow: auto;
+  .api_table {
+    height: rem(30);
+    min-height: 10rem;
+    table {
+      position: absolute;
+    }
+  }
 }
