--- a/src/features/Apiexplorer/LoginDialog/LoginDialog.module.scss
+++ b/src/features/Apiexplorer/LoginDialog/LoginDialog.module.scss
@@ -1,24 +1,36 @@
 @use 'src/styles/utility' as *;
 
 .wrapper {
-    width: rem(44);
+  width: rem(44);
+}
+
+.modal {
+  padding: rem(0.8) 0 0 rem(2.4);
+  font-size: rem(1.4);
+  line-height: rem(2);
+  @media (max-width: 992px) {
+    padding: 0 0 0 rem(1.6);
   }
-  .modal {
-    padding: rem(0.8) 0 0 rem(2.4);
-    font-size: rem(1.4);
-    line-height: rem(2);
-    @media (max-width: 992px) {
-      padding: 0 0 0 rem(1.6);
-    }
+}
+.buttonWrapper {
+  display: flex;
+  justify-content: end;
+  padding: rem(2.4);
+  gap: rem(0.8);
+
+  .btn {
+    padding: rem(1) rem(1.6);
   }
-  
-  .buttonWrapper {
-    display: flex;
-    justify-content: end;
-    padding: rem(2.4);
-    gap: rem(0.8);
-  
-    .btn {
-      padding: rem(1) rem(1.6);
-    }
+}
+
+.validwrapper {
+  width: rem(30);
+}
+.validmodal {
+  padding: rem(0.8) rem(2.4) rem(2.4) rem(2.4);
+  font-size: rem(1.4);
+  line-height: rem(2);
+  @media (max-width: 992px) {
+    padding: 0 0 0 rem(1.6);
   }
+}
