--- a/src/features/Apiexplorer/LoginDialog/LoginDialog.module.scss
+++ b/src/features/Apiexplorer/LoginDialog/LoginDialog.module.scss
@@ -31,6 +31,6 @@
   font-size: rem(1.4);
   line-height: rem(2);
   @media (max-width: 992px) {
-    padding: 0 0 0 rem(1.6);
+    padding: rem(0.8) rem(1.6) rem(1.6) rem(1.6);
   }
 }
