--- a/src/features/Apiexplorer/LoginDialog/LoginDialog.module.scss
+++ b/src/features/Apiexplorer/LoginDialog/LoginDialog.module.scss
@@ -5,7 +5,7 @@
 }
 
 .modal {
-  padding: rem(0.8) 0 0 rem(2.4);
+  padding: rem(0.8) rem(2.4) 0 rem(2.4);
   font-size: rem(1.4);
   line-height: rem(2);
   @media (max-width: 992px) {
@@ -20,6 +20,7 @@
 
   .btn {
     padding: rem(1) rem(1.6);
+    border-radius: rem(1.5);
   }
 }
 
