--- a/src/features/Apiexplorer/LoginDialog/LoginDialog.module.scss
+++ b/src/features/Apiexplorer/LoginDialog/LoginDialog.module.scss
@@ -5,7 +5,10 @@
 }
 
 .modal {
-  padding: rem(0.8) rem(2.4) 0 rem(2.4);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: rem(0.8) rem(2.4) 0;
   font-size: rem(1.4);
   line-height: rem(2);
   @media (max-width: 992px) {
