--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -286,6 +286,9 @@ main[class*='docMainContainer'] .container {
   font-weight: normal;
   font-size: rem(1.6);
   line-height: rem(2.4);
+  @media (max-width: 1201px) {
+    font-size: rem(1.4);
+  }
 }
 
 .dropdown {
