--- a/src/components/UserNavbarItem/UserNavbarItem.module.scss
+++ b/src/components/UserNavbarItem/UserNavbarItem.module.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: rem(1.6) rem(1.6);
   background-position: center;
+  cursor: pointer;
 }
 
 .LogInButton {
