refactor: remove <a> tag

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -60,6 +60,8 @@
       border-radius: rem(1.7);
       font-size: rem(1.4);
       font-weight: bold;
+      text-decoration: none;
+      cursor: pointer;
     }
     .Telegram {
       display: flex;
