fix: prevent line break

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -62,6 +62,7 @@
       font-weight: bold;
       text-decoration: none;
       cursor: pointer;
+      white-space: nowrap;
     }
     .Telegram {
       display: flex;
