--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -273,8 +273,7 @@ main[class*='docMainContainer'] .container {
 
 .dropdown__menu {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: rem(1.6);
+  gap: rem(0.8);
   padding: rem(1.6) rem(1.6);
   background-color: var(--colors-greyLight100);
   border-radius: rem(0.8);
@@ -286,6 +285,12 @@ main[class*='docMainContainer'] .container {
   font-weight: normal;
   font-size: rem(1.6);
   line-height: rem(2.4);
+  @media (max-width: 1201px) {
+    font-size: rem(1.4);
+  }
+}
+
+.navbar__items--right a {
   @media (max-width: 1201px) {
     font-size: rem(1.4);
   }
@@ -314,6 +319,8 @@ main[class*='docMainContainer'] .container {
   color: var(--colors-coral500);
 }
 
+// removes language switcher from sidebar
+// docusaurus puts all navbaritems into sidebar in responsive design by default
 .menu__list-item:last-child {
   display: none;
 }
