chore: fix warning

--- a/src/features/dashboard/components/Dialogs/TokenCreationDialogSuccess/token-creation-dialog-sucess.module.scss
+++ b/src/features/dashboard/components/Dialogs/TokenCreationDialogSuccess/token-creation-dialog-sucess.module.scss
@@ -18,7 +18,7 @@
 
 .buttonWrapper {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   padding: rem(2.4);
   gap: rem(0.8);
 
