--- a/src/features/dashboard/components/ApiTokenTable/api-table.module.scss
+++ b/src/features/dashboard/components/ApiTokenTable/api-table.module.scss
@@ -2,11 +2,9 @@
 
 .api_table_container {
   position: relative;
-  .api_table {
-    height: rem(30);
-    min-height: 10rem;
-    table {
-      position: absolute;
-    }
+  overflow-y: hidden;
+  overflow-x: auto;
+  .api_table table {
+    position: absolute;
   }
 }
