chore: adding more functionality

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -89,6 +89,10 @@ h6 {
   color: var(--colors-coral500) !important;
 }
 
+.error-border {
+  border-color: var(--colors-coral500) !important;
+}
+
 /* reset */
 button {
   all: unset;
