--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -91,6 +91,12 @@ h6 {
 
 .error-border {
   border-color: var(--colors-coral500) !important;
+  &:focus-within {
+    border-color: var(--colors-coral500) !important;
+  }
+  &:focus {
+    outline: var(--colors-coral500) !important;
+  }
 }
 
 /* reset */
