--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -174,6 +174,10 @@ div[class*='sidebarViewport'] {
   align-items: center;
 }
 
+.main-wrapper {
+  height: calc(100vh - rem(7.2));
+}
+
 .navbar {
   padding: 0 5%;
   height: var(--nav-height);
