--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -7,13 +7,14 @@ fieldset .customTextInput:last-child {
 .customTextInput {
   align-items: center;
   border: 1px solid var(--colors-greyLight400);
-  border-radius: 4px;
+  border-radius: rem(1.6);
   display: flex;
   position: relative;
   box-sizing: border-box;
   margin: rem(1) 0;
   &:focus-within {
     border-color: var(--colors-blue400);
+    border-radius: rem(1.6);
   }
   &:hover {
     border: 1px solid var(--colors-greyLight600);
@@ -47,7 +48,7 @@ fieldset .customTextInput:last-child {
     &:focus {
       outline-color: unset;
       outline: 1px solid var(--colors-blue500);
-      border-radius: 3px;
+      border-radius: rem(1.6);
       & ~ label {
         color: var(--colors-blue400);
         background-color: var(--ifm-color-emphasis-0);
@@ -84,6 +85,9 @@ fieldset .customTextInput:last-child {
       display: flex;
       flex-direction: column;
       margin-bottom: rem(2.5);
+      .scopesWrapper {
+        padding-left: rem(1);
+      }
     }
     .disableTokenDropdown {
       opacity: 0.2;
@@ -100,15 +104,23 @@ fieldset .customTextInput:last-child {
       flex-direction: column;
       gap: rem(2);
       margin-bottom: rem(2);
-      .formHeaderContainer {
-        display: flex;
-        padding: rem(1) 0;
-        margin-top: rem(1.5);
-        flex-direction: column;
+    }
+    .formHeaderContainer {
+      display: flex;
+      padding: rem(1) 0;
+      gap: rem(1);
+      margin-top: rem(1.5);
+      flex-direction: column;
+      .subHeading {
+        padding-left: rem(1);
+      }
+      .formsubHeading {
+        padding: rem(1.6);
       }
     }
   }
 }
+
 .submit_container {
   margin-top: rem(2.5);
   display: flex;
@@ -143,4 +155,12 @@ fieldset .customTextInput:last-child {
   label {
     cursor: pointer;
   }
+}
+
+.termsOfConditionRegister {
+  margin-left: rem(2);
+}
+
+.buttonRadius {
+  border-radius: rem(1.6);
 }
