--- a/src/components/CustomSelectDropdown/custom_select_dropdown.module.scss
+++ b/src/components/CustomSelectDropdown/custom_select_dropdown.module.scss
@@ -1,93 +1,93 @@
 @use 'src/styles/utility' as *;
 
 .customSelectField {
+  position: relative;
+  .dropdownWrapper {
+    .dropdown {
+      position: absolute;
+      max-height: 200px;
+      overflow-y: auto;
+      top: 40px;
+      left: 0;
+      gap: rem(1);
+      width: 100%;
+      z-index: 10;
+      padding: rem(1);
+      background-color: var(--ifm-color-emphasis-0);
+      box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0, 0, 0, 0.15);
+      -moz-box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0, 0, 0, 0.15);
+      -webkit-box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0, 0, 0, 0.15);
+    }
+  }
+  .selectWrapper {
     position: relative;
-    .dropdownWrapper {
-        .dropdown {
-            position: absolute;
-            max-height: 200px;
-            overflow-y: auto;
-            top: 40px;
-            left: 0;
-            gap: rem(1);
-            width: 100%;
-            z-index: 10;
-            padding: rem(1);
-            background-color: var(--ifm-color-emphasis-0);
-            box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0,0,0,0.15);
-            -moz-box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0,0,0,0.15);
-            -webkit-box-shadow: 0 rem(1) rem(1.5) rem(0.1) rgba(0,0,0,0.15);
-        }
+    margin: rem(1) 0;
+    width: 100%;
+    height: rem(4);
+    line-height: 36px;
+    border-radius: rem(1.6);
+    font-size: rem(1.6);
+    padding: 0 rem(3) 0 rem(1);
+    color: var(--ifm-color-emphasis-1000);
+    border: 1px solid var(--colors-greyLight400);
+
+    &.error {
+      border: 1px solid var(--colors-coral500);
     }
-    .selectWrapper {
-        position: relative;
-        margin: rem(1) 0;
-        width: 100%;
-        height: rem(4);
-        line-height: 36px;
-        border-radius: 3px;
-        font-size: rem(1.6);
-        padding: 0 rem(3) 0 rem(1);
+    &:hover {
+      border-color: var(--ifm-color-emphasis-500);
+    }
+    &:focus {
+      outline: solid 1px var(--colors-blue500);
+      border-radius: rem(1.6);
+      .selectLabel {
+        color: var(--colors-blue500) !important;
+      }
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      display: inline-block;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      width: 40px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-image: url(/static/img/arrow_down.svg);
+      border-radius: rem(1.6);
+      pointer-events: none;
+      transform: rotate(0deg);
+      transition: transform 0.2s;
+    }
+    &.active {
+      &:after {
+        transform: rotate(180deg);
+      }
+      .dropdownWrapper {
+        display: inline-block;
+      }
+    }
+    &.inactive .dropdownWrapper {
+      display: none;
+    }
+    .selectLabel {
+      color: var(--colors-greyLight600);
+      width: 100%;
+      height: 100%;
+      display: inline-block;
+      &.active {
         color: var(--ifm-color-emphasis-1000);
-        border: 1px solid var(--colors-greyLight400);
-        
-        &.error {
-            border: 1px solid var(--colors-coral500);
-        }
-        &:hover {
-            border-color: var(--ifm-color-emphasis-500);
-        }
-        &:focus {
-            outline: solid 1px var(--colors-blue500);
-            border-radius: 3px;
-            .selectLabel {
-                color: var(--colors-blue500) !important;
-            }
-        }
-        &:after {
-            content: "";
-            position: absolute;
-            display: inline-block;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            width: 40px;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-image: url(/static/img/arrow_down.svg);
-            border-radius: 3px;
-            pointer-events: none;
-            transform: rotate(0deg);
-            transition: transform .2s;
-        }
-        &.active {
-            &:after {
-                transform: rotate(180deg);
-            } 
-            .dropdownWrapper {
-                display: inline-block;
-            }
-        }
-        &.inactive .dropdownWrapper {
-            display: none;
-        }
-        .selectLabel {
-            color: var(--colors-greyLight600);
-            width: 100%;
-            height: 100%;
-            display: inline-block;
-            &.active {
-                color: var(--ifm-color-emphasis-1000);
-                position: absolute;
-                font-size: rem(1.2);
-                background-color: var(--ifm-color-emphasis-0);
-                bottom: rem(3.7);
-                left: rem(1);
-                padding: 0 rem(0.4);
-                line-height: rem(1);
-                height: auto;
-                width: auto;
-            }
-        }
+        position: absolute;
+        font-size: rem(1.2);
+        background-color: var(--ifm-color-emphasis-0);
+        bottom: rem(3.7);
+        left: rem(1);
+        padding: 0 rem(0.4);
+        line-height: rem(1);
+        height: auto;
+        width: auto;
+      }
     }
+  }
 }
