chore: register form style update

--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -117,6 +117,9 @@ fieldset .customTextInput:last-child {
       .formsubHeading {
         padding: rem(1.6);
       }
+      .markup {
+        margin-bottom: rem(1);
+      }
     }
   }
 }
