--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,6 +34,7 @@
   --schema-array: #ff8fc8;
   --schema-number: #acb2ff;
   --schema-integer: #f8c272;
+  --smoke: #414652;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
