--- a/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
+++ b/src/features/dashboard/components/ApiTokenForm/api-token.form.module.scss
@@ -51,7 +51,7 @@ form {
 .customTextInput {
   align-items: center;
   border: 1px solid var(--colors-greyLight400);
-  border-radius: 4px;
+  border-radius: rem(1.6);
   display: flex;
   position: relative;
   box-sizing: border-box;
@@ -69,6 +69,8 @@ form {
     position: absolute;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+    border-top-right-radius: rem(1.6);
+    border-bottom-right-radius: rem(1.6);
   }
   label {
     position: absolute;
@@ -102,7 +104,7 @@ form {
     &:focus {
       outline-color: unset;
       outline: 1px solid var(--colors-blue500);
-      border-radius: rem(0.3);
+      border-radius: rem(1.6);
       & ~ label {
         color: var(--colors-blue400);
         background-color: var(--ifm-color-emphasis-0);
@@ -130,7 +132,13 @@ form {
 }
 
 .helperText {
-  font-size: rem(1.4);
+  line-height: 2.2;
   padding-left: rem(1);
   color: var(--colors-greyLight600);
+  li {
+    font-size: rem(1);
+    span {
+      font-size: rem(1.4);
+    }
+  }
 }
