--- a/src/features/dashboard/components/Table/table.scss
+++ b/src/features/dashboard/components/Table/table.scss
@@ -39,7 +39,7 @@
   td:first-child,
   th:first-child {
     padding-left: rem(3.2);
-    white-space: pre;
+    white-space: break-spaces;
   }
 
   tbody tr {
